<resources xmlns:tools="http://schemas.android.com/tools">
	<string name="screen_title_profile" tools:ignore="UnusedResources">Profile</string>
	<string name="screen_title_photo_form" tools:ignore="UnusedResources">Photo</string>
	<string name="screen_title_about_form" tools:ignore="UnusedResources">About Patchr</string>
	<string name="screen_title_map_form" tools:ignore="UnusedResources">Patch location</string>
	<string name="screen_title_search_form" tools:ignore="UnusedResources">Search</string>
	<string name="screen_title_settings_form" tools:ignore="UnusedResources">Settings</string>
	<string name="screen_title_invite" tools:ignore="UnusedResources">Invite to patch</string>
	<string name="screen_title_share" tools:ignore="UnusedResources">Share</string>
	<string name="screen_title_patch_edit" tools:ignore="UnusedResources">Edit patch</string>
	<string name="screen_title_patch_new" tools:ignore="UnusedResources">New patch</string>
	<string name="screen_title_message_edit" tools:ignore="UnusedResources">Edit message</string>
	<string name="screen_title_message_new" tools:ignore="UnusedResources">Compose</string>
	<string name="screen_title_profile_edit" tools:ignore="UnusedResources">Edit profile</string>
	<string name="screen_title_feedback_edit" tools:ignore="UnusedResources">Feedback</string>
	<string name="screen_title_report_edit" tools:ignore="UnusedResources">Report</string>
	<string name="screen_title_password_edit" tools:ignore="UnusedResources">Change password</string>
	<string name="screen_title_signin_edit" tools:ignore="UnusedResources">Log in</string>
	<string name="screen_title_register_edit" tools:ignore="UnusedResources">Join Patchr</string>
	<string name="screen_title_reset_edit" tools:ignore="UnusedResources">Password reset</string>
	<string name="screen_title_proximity_edit" tools:ignore="UnusedResources">Tune patch proximity</string>
	<string name="screen_title_privacy_builder" tools:ignore="UnusedResources">Privacy setting</string>
	<string name="screen_title_photo_picker" tools:ignore="UnusedResources">Photo search</string>
	<string name="screen_title_location_picker" tools:ignore="UnusedResources">Set patch location</string>
	<string name="screen_title_patch_list" tools:ignore="UnusedResources">Patches</string>
	<string name="screen_title_nearby" tools:ignore="UnusedResources">Nearby</string>
	<string name="screen_title_member_of" tools:ignore="UnusedResources">Member of</string>
	<string name="screen_title_owner_of" tools:ignore="UnusedResources">Owner of</string>
	<string name="screen_title_like" tools:ignore="UnusedResources">Favorites</string>
	<string name="screen_title_explore" tools:ignore="UnusedResources">Explore</string>
	<string name="screen_title_notifications" tools:ignore="UnusedResources">Notifications</string>
	<string name="screen_title_likes" tools:ignore="UnusedResources">Liked by</string>
	<string name="screen_title_members" tools:ignore="UnusedResources">Members</string>
	<string name="form_title_profile_edit" tools:ignore="UnusedResources">Profile</string>
	<string name="form_title_profile_signup" tools:ignore="UnusedResources">Make your profile more personal</string>
	<string name="form_title_login_edit" tools:ignore="UnusedResources">Welcome back.</string>
	<string name="form_title_login_signup" tools:ignore="UnusedResources">Sign up for a free account to post messages, create patches, and more.</string>
	<string name="form_title_password_edit" tools:ignore="UnusedResources">Change password</string>
	<string name="form_title_patch_edit" tools:ignore="UnusedResources">Patch</string>
	<string name="form_title_patch_new" tools:ignore="UnusedResources">New Patch</string>
	<string name="form_title_privacy_edit" tools:ignore="UnusedResources">Privacy</string>
	<string name="form_title_reset_validate_email" tools:ignore="UnusedResources">Enter the email address associated with your account.</string>
	<string name="form_title_reset_request_reset" tools:ignore="UnusedResources">Email verified!</string>
	<string name="form_title_reset_reset_password" tools:ignore="UnusedResources">Welcome back! Enter your new password</string>
	<string name="form_title_invite" tools:ignore="UnusedResources">Invite friends to your new patch.</string>
	<string name="menu_item_add_entity">Add content</string>
	<string name="menu_item_cancel">Cancel</string>
	<string name="menu_item_refresh">Refresh</string>
	<string name="menu_item_notifications">Notifications</string>
	<string name="menu_item_edit_user">Edit profile</string>
	<string name="menu_item_share">Share</string>
	<string name="menu_item_search">Search</string>
	<string name="menu_item_navigate">Directions</string>
	<string name="menu_item_logout">Log out</string>
	<string name="menu_item_login">Log in</string>
	<string name="menu_item_signup">"  Sign up  "</string>
	<string name="menu_item_send">Send</string>
	<string name="menu_item_next">Next</string>
	<string name="menu_item_join">Join</string>
	<string name="menu_item_invite">Invite</string>
	<string name="menu_item_map">Map location</string>
	<string name="menu_item_overflow">Actions</string>
	<string name="menu_item_delete">Delete</string>
	<string name="menu_item_remove">Remove</string>
	<string name="menu_item_leave">Leave patch</string>
	<string name="menu_item_requests">Member requests</string>
	<string name="menu_item_accept">Accept</string>
	<string name="menu_item_done">Done</string>
	<string name="menu_item_save">"  Save  "</string>
	<string name="menu_item_edit_patch">Edit patch</string>
	<string name="menu_item_mute_patch">Mute patch</string>
	<string name="menu_item_unmute_patch">Unmute patch</string>
	<string name="menu_item_edit_message">Edit</string>
	<string name="menu_item_view_as_map">View as map</string>
	<string name="menu_item_view_as_list">View as list</string>
	<string name="menu_item_invite_using_patchr">Patchr</string>
	<string name="menu_item_invite_using_facebook">Facebook</string>
	<string name="menu_item_invite_using_other">More</string>
	<string name="menu_item_share_using_patchr">Patchr</string>
	<string name="menu_item_share_using_other">More</string>
	<string name="menu_item_tabbar_patches">Patches</string>
	<string name="menu_item_tabbar_notifications">Notifications</string>
	<string name="menu_item_tabbar_search">Search</string>
	<string name="menu_item_tabbar_profile">Me</string>
	<string name="menu_item_login_using_phone">Phone Number</string>
	<string name="menu_item_login_using_email">Email</string>
	<string name="menu_item_login_using_password">Password</string>
	<string name="menu_item_report">Report</string>
	<string name="dialog_ok">OK</string>
	<string name="dialog_cancel">Cancel</string>
	<string name="dialog_address_builder_title" tools:ignore="UnusedResources">Address</string>
	<string name="dialog_photo_action_title">Select photo</string>
	<string name="dialog_photo_action_search">Search for photos</string>
	<string name="dialog_photo_action_gallery">Select a gallery photo</string>
	<string name="dialog_photo_action_edit">Edit photo</string>
	<string name="dialog_photo_action_camera">Take a new photo</string>
	<string name="dialog_photo_action_default">Default</string>
	<string name="dialog_update_title">Update available</string>
	<string name="dialog_update_message">Your version is not compatible with the Patchr servce. Please update to the latest version of Patchr.</string>
	<string name="dialog_update_ok">Update</string>
	<string name="dialog_update_cancel">No thanks</string>
	<string name="dialog_aviary_title">Aviary Photo Editor</string>
	<string name="dialog_aviary_message">Make your Patchr photos perfect using the Aviary photo editor.</string>
	<string name="dialog_aviary_ok">Install</string>
	<string name="dialog_aviary_cancel">No thanks</string>
	<string name="dialog_unwatch_private_title" tools:ignore="UnusedResources">Leave private patch</string>
	<string name="dialog_unwatch_private_message" tools:ignore="UnusedResources">If you leave a private patch, content will no longer be visible to you.</string>
	<string name="dialog_unwatch_private_ok" tools:ignore="UnusedResources">Leave</string>
	<string name="dialog_unwatch_private_cancel" tools:ignore="UnusedResources">Cancel</string>
	<string name="dialog_watch_private_title" tools:ignore="UnusedResources">Watch private patch</string>
	<string name="dialog_watch_private_message" tools:ignore="UnusedResources">A request to watch this patch will be sent to the patch owner.</string>
	<string name="dialog_watch_private_ok" tools:ignore="UnusedResources">Watch</string>
	<string name="dialog_watch_private_cancel" tools:ignore="UnusedResources">Cancel</string>
	<string name="dialog_decline_approved_private_title" tools:ignore="UnusedResources">Remove watcher</string>
	<string name="dialog_decline_approved_private_message" tools:ignore="UnusedResources">The watcher will be removed and unable to view content for this patch.</string>
	<string name="dialog_decline_approved_private_ok" tools:ignore="UnusedResources">Remove</string>
	<string name="dialog_decline_approved_private_cancel" tools:ignore="UnusedResources">Cancel</string>
	<string name="dialog_decline_requested_private_title" tools:ignore="UnusedResources">Decline request</string>
	<string name="button_change_password">Change password</string>
	<string name="button_login">Log in</string>
	<string name="button_signup">Join</string>
	<string name="button_terms">Terms of Service</string>
	<string name="button_privacy">Privacy policy</string>
	<string name="button_legal">Open source licenses</string>
	<string name="button_forgot_password">Forgot password?</string>
	<string name="button_invite_patchr">Patchr friends</string>
	<string name="button_invite_facebook">Facebook friends</string>
	<string name="button_invite_more">More</string>
	<string name="button_invite_submit">Finished</string>
	<string name="label_fullname">Full name</string>
	<string name="label_location">Location</string>
	<string name="label_password">Password</string>
	<string name="label_terms">By joining, you agree to the Terms of Service</string>
	<string name="label_email">Email</string>
	<string name="label_about_install">Install</string>
	<string name="label_auth_identifier_onboarding">Logging in using:</string>
	<string name="label_drawer_item_nearby">Nearby</string>
	<string name="label_drawer_item_watch">Member</string>
	<string name="label_drawer_item_create">Own</string>
	<string name="label_drawer_item_trend_active">Explore</string>
	<string name="label_drawer_item_more_settings">Settings</string>
	<string name="dummy_name" tools:ignore="UnusedResources">Jay Massena</string>
	<string name="dummy_copyright" tools:ignore="UnusedResources">&#169;2013 3meters LLC.</string>
	<string name="dummy_version" tools:ignore="UnusedResources">Version: 0.9.35 (76)</string>
	<string name="dummy_install_id" tools:ignore="TypographyDashes">f8953a63-2019-4793-9b03-e93370913c4b</string>
	<string name="dummy_install_date" tools:ignore="UnusedResources">December 23 at 10:12am</string>
	<string name="dummy_install_type" tools:ignore="UnusedResources">serial_num</string>
	<string name="dummy_message" tools:ignore="UnusedResources">Ever wonder why fans refuse to use anything else? For more than four days, Patchr has attracted a growing family of loyal, almost zealous customers, known as “Patchniks”.</string>
	<string name="dummy_description" tools:ignore="UnusedResources">Ever wonder why fans refuse to use anything else? For more than four days, Patchr has attracted a growing family of loyal, almost zealous customers, known as “Candiniks”. By remaining true to the quality tenets of our founder – emphasizing knowledge, taste, and using the senses to evaluate quality at every step – Patchr defines the gold standard by which all other proximity applications are judged.</string>
</resources>