<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:custom="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:background="@color/background_form"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<android.support.design.widget.AppBarLayout
		android:id="@+id/appbar_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/transparent">

		<android.support.v7.widget.Toolbar

			android:id="@+id/actionbar_toolbar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="?attr/actionBarSize"
			android:theme="@style/patchr_theme_action_bar"
			custom:layout_scrollFlags="scroll|enterAlways"
			custom:popupTheme="@style/ThemeOverlay.AppCompat.Light">

			<TextView
				android:id="@+id/toolbar_title"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="left"
				android:textSize="18sp"
				tools:text="Title" />

		</android.support.v7.widget.Toolbar>

	</android.support.design.widget.AppBarLayout>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_gravity="center_horizontal"
		android:fillViewport="true">

		<RelativeLayout
			android:layout_width="288dp"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:focusable="true">

			<LinearLayout
				android:id="@+id/holder_body"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="top"
				android:orientation="vertical"
				android:paddingBottom="15dp"
				android:paddingTop="15dp">

				<!-- Title and Content -->

				<ImageView
					android:id="@+id/app_logo"
					android:layout_width="@dimen/image_medium_small"
					android:layout_height="@dimen/image_medium_small"
					android:layout_gravity="center_horizontal"
					android:layout_marginBottom="15dp"
					android:src="@drawable/ic_launcher" />

				<TextView
					android:id="@+id/app_name"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					android:fontFamily="sans-serif-light"
					android:text="@string/name_app"
					android:textColor="@color/brand_accent"
					android:textSize="30sp" />

				<TextView
					android:id="@+id/version"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					android:text="@string/dummy_version"
					android:textSize="16sp" />

				<TextView
					android:id="@+id/copyright"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					android:layout_marginBottom="30dp"
					android:text="@string/dummy_copyright"
					android:textSize="16sp" />

				<Button
					android:id="@+id/terms_button"
					style="@style/button_outlined"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="8dp"
					android:onClick="onClick"
					android:text="@string/button_terms" />

				<Button
					android:id="@+id/legal_button"
					style="@style/button_outlined"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="8dp"
					android:onClick="onClick"
					android:text="@string/button_legal" />

				<Button
					android:id="@+id/privacy_policy_button"
					style="@style/button_outlined"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:onClick="onClick"
					android:text="@string/button_privacy" />
			</LinearLayout>

			<LinearLayout
				android:id="@+id/holder_footer"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_alignParentBottom="true"
				android:layout_below="@+id/holder_body"
				android:baselineAligned="false"
				android:gravity="bottom"
				android:orientation="vertical"
				android:visibility="gone">

				<TextView
					android:id="@+id/install"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginBottom="5dp"
					android:text="@string/label_about_install" />

				<TableLayout
					android:id="@+id/holder_install"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<TableRow>

						<TextView
							android:id="@+id/install_id"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/dummy_install_id"
							android:textAppearance="?android:attr/textAppearanceSmall"
							android:textColor="?attr/textColorSecondary" />
					</TableRow>

					<View
						android:layout_width="match_parent"
						android:layout_height="@dimen/rule_divider_height"
						android:background="?attr/ruleColor" />

					<TableRow>

						<TextView
							android:id="@+id/install_type"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/dummy_install_type"
							android:textAppearance="?android:attr/textAppearanceSmall"
							android:textColor="?attr/textColorSecondary" />
					</TableRow>

					<View
						android:layout_width="match_parent"
						android:layout_height="@dimen/rule_divider_height"
						android:background="?attr/ruleColor" />

					<TableRow>

						<TextView
							android:id="@+id/install_date"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/dummy_install_date"
							android:textAppearance="?android:attr/textAppearanceSmall"
							android:textColor="?attr/textColorSecondary" />
					</TableRow>

				</TableLayout>
			</LinearLayout>
		</RelativeLayout>

	</ScrollView>
</LinearLayout>



