<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:custom="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<android.support.design.widget.AppBarLayout
		android:id="@+id/appbar_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/transparent">

		<android.support.v7.widget.Toolbar

			android:id="@+id/actionbar_toolbar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="?attr/actionBarSize"
			android:theme="@style/patchr_theme_action_bar"
			custom:layout_scrollFlags="scroll|enterAlways"
			custom:popupTheme="@style/ThemeOverlay.AppCompat.Light">

			<TextView
				android:id="@+id/toolbar_title"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="left"
				android:textSize="18sp"
				tools:text="Title" />

		</android.support.v7.widget.Toolbar>

	</android.support.design.widget.AppBarLayout>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:fillViewport="true">

		<LinearLayout
			android:layout_width="228dp"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:orientation="vertical">

			<!-- Title and Content -->

			<TextView
				android:id="@+id/title"
				style="@style/text_appearance_title"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_marginBottom="16dp"
				android:layout_marginTop="24dp"
				android:gravity="center_horizontal"
				android:text="@string/form_title_invite" />

			<Button
				android:id="@+id/patchr_button"
				style="@style/button_outlined"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:onClick="onClick"
				android:text="@string/button_invite_patchr" />

			<Button
				android:id="@+id/facebook_button"
				style="@style/button_outlined"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:onClick="onClick"
				android:text="@string/button_invite_facebook" />

			<Button
				android:id="@+id/more_button"
				style="@style/button_outlined"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:onClick="onClick"
				android:text="@string/button_invite_more" />

			<Button
				android:id="@+id/submit_button"
				style="@style/button_featured"
				android:layout_width="match_parent"
				android:layout_marginTop="-2dp"
				android:layout_marginLeft="-4dp"
				android:layout_marginRight="-4dp"
				android:layout_height="56dp"
				android:onClick="onClick"
				android:text="@string/button_invite_submit"
				android:theme="@style/button_primary_overlay" />

		</LinearLayout>
	</ScrollView>

</LinearLayout>