<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:custom="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/background_form"
	android:orientation="vertical"
	tools:context=".ui.edit.ProfileEdit">

	<android.support.design.widget.AppBarLayout
		android:id="@+id/appbar_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/transparent">

		<android.support.v7.widget.Toolbar

			android:id="@+id/actionbar_toolbar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="?attr/actionBarSize"
			android:theme="@style/patchr_theme_action_bar"
			custom:layout_scrollFlags="scroll|enterAlways"
			custom:popupTheme="@style/ThemeOverlay.AppCompat.Light">

			<TextView
				android:id="@+id/toolbar_title"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="left"
				android:textSize="18sp"
				tools:text="Title" />

		</android.support.v7.widget.Toolbar>

	</android.support.design.widget.AppBarLayout>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:fillViewport="true">

		<!-- Content -->

		<LinearLayout
			android:layout_width="288dp"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:orientation="vertical"
			android:weightSum="1">

			<TextView
				android:id="@+id/title"
				style="@style/text_appearance_title"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_marginBottom="16dp"
				android:layout_marginTop="24dp"
				android:gravity="center_horizontal"
				android:text="@string/form_title_profile_edit" />

			<!-- User picture -->

			<com.patchr.ui.widgets.PhotoEditWidget
				android:id="@+id/photo_edit"
				android:layout_width="150dp"
				android:layout_height="150dp"
				android:layout_gravity="center_horizontal"
				android:layout_marginBottom="8dp"
				android:background="@drawable/bg_rounded_placeholder"
				custom:aspectRatio="1.0"
				custom:category="profile"
				custom:radius="18"
				custom:shape="rounded" />

			<!-- Full name -->

			<com.patchr.ui.widgets.ClearableEditText
				android:id="@+id/name"
				style="@style/form_edit"
				android:layout_width="match_parent"
				android:layout_height="@dimen/form_field_height"
				android:drawableRight="?attr/iconClear"
				android:hint="@string/label_fullname"
				android:inputType="textCapWords|textPersonName|textNoSuggestions" />

			<com.patchr.ui.widgets.ClearableEditText
				android:id="@+id/area"
				style="@style/form_edit"
				android:layout_width="match_parent"
				android:layout_height="@dimen/form_field_height"
				android:drawableRight="?attr/iconClear"
				android:hint="@string/label_location"
				android:inputType="textPostalAddress|textAutoCorrect" />

			<TextView
				android:id="@+id/auth_identifier_label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_marginLeft="4dp"
				android:layout_marginTop="8dp"
				android:ellipsize="end"
				android:singleLine="true"
				android:text="@string/label_auth_identifier_onboarding"
				android:textAllCaps="true"
				android:textColor="?attr/textColor"
				android:textSize="10sp"
				android:visibility="gone"
				tools:ignore="SmallSp"
				tools:text="logging in using:"
				tools:visibility="visible" />

			<TextView
				android:id="@+id/auth_identifier"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_marginLeft="4dp"
				android:ellipsize="end"
				android:singleLine="true"
				android:textColor="?attr/textColor"
				android:textSize="16sp"
				android:visibility="gone"
				tools:text="aliza@3meters.com"
				tools:visibility="visible" />

			<com.patchr.ui.widgets.ClearableEditText
				android:id="@+id/email"
				style="@style/form_edit"
				android:layout_width="match_parent"
				android:layout_height="@dimen/form_field_height"
				android:drawableRight="?attr/iconClear"
				android:hint="@string/label_email"
				android:inputType="textEmailAddress" />

			<Button
				android:id="@+id/change_password_button"
				style="@style/button_outlined"
				android:layout_width="match_parent"
				android:layout_height="@dimen/button_height"
				android:layout_marginLeft="4dp"
				android:layout_marginRight="4dp"
				android:layout_marginTop="4dp"
				android:onClick="onClick"
				android:text="@string/button_change_password" />

			<Button
				android:id="@+id/signup_button"
				style="@style/button_featured"
				android:layout_width="match_parent"
				android:layout_height="56dp"
				android:layout_marginLeft="1dp"
				android:layout_marginRight="1dp"
				android:layout_marginTop="4dp"
				android:onClick="onClick"
				android:text="@string/button_signup"
				android:visibility="gone"
				tools:visibility="visible" />

			<Button
				android:id="@+id/terms_button"
				style="@style/button_flat"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="4dp"
				android:layout_marginRight="4dp"
				android:layout_marginTop="8dp"
				android:clickable="true"
				android:gravity="center"
				android:minHeight="44dp"
				android:onClick="onClick"
				android:text="@string/label_terms"
				android:textAllCaps="false"
				android:visibility="gone"
				tools:visibility="visible" />

		</LinearLayout>

	</ScrollView>

</LinearLayout>