<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <ImageView
        android:id="@+id/indicator_image"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_centerVertical="true"
        android:maxHeight="20dp"
        android:maxWidth="20dp"
        android:scaleType="fitCenter"
        android:tint="@color/brand_primary"
        android:src="@drawable/ic_action_monolog_light" />

    <com.aircandi.ui.widgets.AirTextView
        android:id="@+id/indicator_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginRight="6dp"
        android:layout_toRightOf="@+id/indicator_image"
        android:text="@string/dummy_name"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold"
        android:visibility="gone"
        custom:textId="@string/dummy_name" />

    <com.aircandi.ui.widgets.AirTextLight
        android:id="@+id/indicator_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/indicator_name"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/dummy_message"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="italic"
        custom:textId="@string/dummy_description" />

</RelativeLayout>