<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:id="@+id/bottom_sheet"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="@color/transparent"
	android:gravity="center"
	android:orientation="vertical"
	android:paddingBottom="12dp"
	app:layout_behavior="@string/bottom_sheet_behavior">

	<FrameLayout
		android:id="@+id/edit_patch_group"
		android:layout_width="match_parent"
		android:background="@color/white"
		android:layout_height="wrap_content">

		<Button
			android:id="@+id/edit_patch"
			style="@style/button_link"
			android:layout_width="match_parent"
			android:layout_height="48dp"
			android:fontFamily="sans-serif"
			android:gravity="center"
			android:onClick="onClick"
			android:text="@string/menu_item_edit_patch"
			android:textAllCaps="true" />

		<View
			android:layout_width="match_parent"
			android:layout_height="@dimen/rule_divider_height"
			android:layout_gravity="bottom"
			android:background="?attr/ruleColor" />
	</FrameLayout>

	<FrameLayout
		android:id="@+id/mute_patch_group"
		android:layout_width="match_parent"
		android:background="@color/white"
		android:layout_height="wrap_content">

		<Button
			android:id="@+id/mute_patch"
			style="@style/button_link"
			android:layout_width="match_parent"
			android:layout_height="48dp"
			android:fontFamily="sans-serif"
			android:gravity="center"
			android:onClick="onClick"
			android:text="@string/menu_item_mute_patch"
			android:textAllCaps="true" />

		<View
			android:layout_width="match_parent"
			android:layout_height="@dimen/rule_divider_height"
			android:layout_gravity="bottom"
			android:background="?attr/ruleColor" />
	</FrameLayout>

	<FrameLayout
		android:id="@+id/leave_patch_group"
		android:background="@color/white"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<Button
			android:id="@+id/leave_patch"
			style="@style/button_link"
			android:layout_width="match_parent"
			android:layout_height="48dp"
			android:fontFamily="sans-serif"
			android:gravity="center"
			android:onClick="onClick"
			android:text="@string/menu_item_leave"
			android:textAllCaps="true" />

		<View
			android:layout_width="match_parent"
			android:layout_height="@dimen/rule_divider_height"
			android:layout_gravity="bottom"
			android:background="?attr/ruleColor" />
	</FrameLayout>

	<Button
		android:id="@+id/report"
		style="@style/button_link"
		android:background="@color/white"
		android:layout_width="match_parent"
		android:layout_height="48dp"
		android:fontFamily="sans-serif"
		android:gravity="center"
		android:onClick="onClick"
		android:text="@string/menu_item_report"
		android:textAllCaps="true" />
</LinearLayout>

